frontend/src/app/components/data-section/data-section.scss
@import "resources/index";

data-section
{
    // Use vertical flex layout.
    display: flex;
    flex-direction: column;

    .data-section-header
    {
        // Use horizontal flex layout.
        display: flex;
        align-items: center;

        // Fill the available width.
        width: 100%;

        // Ensure full opacity, even when the button is disabled.
        opacity: 1;

        // Use default cursor, unless toggling is enabled.
        cursor: inherit;
    }

    .data-section-header-content
    {
        // Fill the available width.
        flex-grow: 1;
    }

    .data-section-header-toggle
    {
        // Push to the right.
        margin-left: auto;

        // Ensure correct vertical alignment of text and icon.
        line-height: 1;

        // Prevent selection.
        user-select: none;
    }

    .data-section-content
    {
        // Allow content to be positioned relative to this element.
        position: relative;

        // Fill the available width.
        flex-grow: 1;

        // Use vertical flex layout.
        display: flex;
        flex-direction: column;
    }

    &.--toggle
    {
        .data-section-header
        {
            // Use cursor to indicate the header is clickable.
            cursor: pointer;

            .data-section-header-toggle
            {
                padding: 1rem;
                border: var(--border-width-thin) solid var(--surface-neutral-border-color);
                border-radius: var(--border-radius-medium);
                color: var(--surface-primary-icon-color);
            }

            .data-section-header-content
            {
                padding-left: 5rem;
            }
        }

        .data-section-content
        {
            padding-left: 11rem;
        }
    }

    &:not(.--header-slot-empty) .data-section-content
    {
        // Apply spacing between the header and the content.
        margin-top: var(--font-large-margin-top);
    }

    &:not(.--expanded).--invalid
    {
        // Use negative accent color if the section is invalid.
        // Note that this will be overridden if the section is expanded.
        color: var(--surface-negative-text-color);
    }

    &.margin
    {
        &, &-top
        {
            margin-top: var(--font-large-margin-top);
        }

        &, &-bottom
        {
            margin-bottom: var(--font-large-margin-top);
        }
    }

    &.margin-double
    {
        &, &-top
        {
            margin-top: calc(2 * var(--font-large-margin-top));
        }

        &, &-bottom
        {
            margin-bottom: calc(2 * var(--font-large-margin-top));
        }
    }
}

